# homework29

./: pyproject.toml
ads/: models.py
ads/migrations/: 0001_initial.py  0002_location_alter_ad_options_alter_category_options_and_more.py  0003_remove_ad_address.py  0004_alter_category_name.py  0005_rename_author_id_ad_author_and_more.py
ads/serializers/: ad.py  user.py
ads/urls/: urls_us.py
ads/views/: views_ad.py
levito/: settings.py  urls.py
