[tool.poetry]
name = "homework29-1"
version = "0.1.0"
description = ""
authors = ["evlit <evlit23@gmail.com>"]
readme = "README.md"
packages = [{include = "homework29_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
